--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "gatsby": "^2.24.54",
+    "arwes": "^1.0.0-alpha.5",
+    "gatsby": "^2.24.57",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
