--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "arwes": "^1.0.0-alpha.5",
     "gatsby": "^2.24.57",
+    "gatsby-source-graphql": "^2.7.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
